@@ -1174,7 +1174,7 @@ $wgAutoloadLocalClasses = [
 	'PostgresInstaller' => __DIR__ . '/includes/installer/PostgresInstaller.php',
 	'PostgresUpdater' => __DIR__ . '/includes/installer/PostgresUpdater.php',
 	'Preferences' => __DIR__ . '/includes/Preferences.php',
-	'PreferencesForm' => __DIR__ . '/includes/specials/forms/PreferencesForm.php',
+	'PreferencesForm' => __DIR__ . '/includes/specials/forms/PreferencesFormLegacy.php',
 	'PreferencesFormLegacy' => __DIR__ . '/includes/specials/forms/PreferencesFormLegacy.php',
 	'PreferencesFormOOUI' => __DIR__ . '/includes/specials/forms/PreferencesFormOOUI.php',
 	'PrefixSearch' => __DIR__ . '/includes/PrefixSearch.php',
